# fast-api-openrouter

./: LICENSE  README.md  chat_manager.py  main.py  models.py  openrouter_client.py  pyproject.toml  requirements.txt  test_project.py
Frontend/: README.md  index.html  script.js  styles.css
chat_logs/: 18f49f71-6ee1-4b45-aa7a-d7daefc86da6.json  68903b41-39c2-4538-8a37-1a70c2921235.json
tests/: test_main.py  test_main_fixed.py  test_models.py  test_models_fixed.py  test_openrouter_client.py
